--- a/styles/style.css
+++ b/styles/style.css
@@ -4,16 +4,23 @@
   box-sizing: border-box;
 }
 
+:root{
+    --fade: #F5F5F5;
+    /* --fade:#ff0000; */
+}
+
 body {
   font-family: "Montserrat", sans-serif;
   /* font-family: "Julius Sans One", sans-serif; */
   margin: 0;
   width: 100%;
+  background-color: var(--fade);
 }
 
 .home-page {
   /* font-family: "Julius Sans One", sans-serif; */
-  background-color: #e3e7e95e;
+  background-color:  var(--fade);
+  height: 130vh;
 }
 
 /* NAV BAR STYLING */
@@ -21,10 +28,9 @@ body {
   display: flex;
   justify-content: space-evenly;
   align-items: center;
-  background-color: #e3e7e95e;
-  border-bottom: 1px solid #e3e7e9b4;
-  padding: 15px;
-  /* height: 14vh; */
+  background-color: var(--fade);
+  border-bottom: 2px solid #e6e5e5;
+  padding: 20px 5px 5px 5px;
 }
 
 .navBar #log {
@@ -44,6 +50,13 @@ body {
 .nav-cart > ul > li {
   list-style: none;
   margin-right: 40px;
+  cursor: pointer;
+
+}
+
+.navBar > ul > li > a {
+  color: #000;
+  text-decoration: none;
 }
 
 /* HERO SECTION */
@@ -51,6 +64,7 @@ body {
 .new-collection-text {
   display: flex;
   justify-content: center;
+  /* gap: 20px; */
   align-items: center;
   flex-direction: column;
   /* height: 30vh; */
@@ -59,23 +73,192 @@ body {
 
 .new-collection-header {
   font-family: "Julius Sans One", sans-serif;
-  font-size: 3.5rem;
+  font-size: 3rem;
   /* text-align: center; */
   /* margin-top: 30px; */
 }
 
 .new-collection-text p {
-  font-size: 0.8rem;
-  line-height: 20px;
+  font-size: 0.7rem;
+  line-height: 15px;
   width: 50%;
 }
 
 .new-collection {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+.new-collection-box-1,
+.new-collection-box-2,
+.new-collection-box-3 {
+  flex: 30%;
+  box-shadow: 0 0 20px #80808042;
+}
+
+.new-collection-box-1,
+.new-collection-box-2 {
+  flex: 30%;
+  margin-right: 20px;
+}
+
+.new-collection-box-1 > img,
+.new-collection-box-2 > img,
+.new-collection-box-3 > img {
+  width: 100%;
+  height: 100%;
+  border-radius: 5px;
+}
+
+.classic{
+  font-family: "Julius Sans One", sans-serif;
+}
+
+
+/* SHOP PAGE STYLE */
+
+.shop-page{
+    background: #fff;
+    /* height: 150vh; */
+    /* border: 2px solid red; */
+    /* width: 95%;
+    margin: auto; */
+}
+.shop-page>.display.classic{
+    font-size: 6rem;
+    text-align: center;
+}
+
+.shop-page>.shop-categories{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+
+}
+.shop-page>.shop-categories>.shop-category-1,
+.shop-page>.shop-categories>.shop-category-2,
+.shop-page>.shop-categories>.shop-category-3,
+.shop-page>.shop-categories>.shop-category-4
+{
+    /* border: 2px solid red; */
+    width: 20rem;
+    height: 30rem;
+}
+.shop-page>.shop-categories>.shop-category-1,
+.shop-page>.shop-categories>.shop-category-2,
+.shop-page>.shop-categories>.shop-category-3,
+.shop-page>.shop-categories>.shop-category-4
+{
+    margin-right: 30px;
+
+}
+
+.shop-page>.shop-categories>.shop-category-1>img,
+.shop-page>.shop-categories>.shop-category-2>img,
+.shop-page>.shop-categories>.shop-category-3>img,
+.shop-page>.shop-categories>.shop-category-4>img
+{
+    width: 100%;
+    height: 85%;
+    border-radius: 5px;
+    object-fit: cover;
+
+}
+
+.shop-category-1,
+.shop-category-2
+.shop-category-3>p{
+    font-weight: bold;
+    /* text-decoration: underline; */
+    /* line-height: 90px; */
+}
+
+
+#video-ads{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /* border: 2px solid red; */
+    width: 100%;
+    height: 20em;
+    padding: 2em 0;
+}
+
+
+#video-ads>video{
+    /* display: none; */
+    width: 82%;
+    height: 60%;
+    object-fit: cover;
+    /* border-radius: 5px; */
+}
+
+
+.new-arrivals{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    /* background-color: var(--fade); */
+    padding: 3rem 0;
+}
+
+.new-arrivals>.headings{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+    margin: 2rem ;
+    width: 95%;
+}
+
+.new-arrivals>.headings>.heading-1{
+    font-size: 1.5rem;
+}
+
+
+.new-arrival-div{
     display: flex;
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
-    border: 2px solid red;
-    /* width: 300px; */
+    /* padding: 5rem 0; */
 }
 
+
+.new-arrival-box{
+    /* border: 2px solid red; */
+    width: 15rem;
+    height: 22rem;
+    margin-right: 20px;
+    box-shadow: 0 0 10px #8080803d;
+    margin-top: 50px;    
+}
+
+.new-arrival-box>img{
+    width: 100%;
+    height: 80%;
+    object-fit: contain;
+    /* box-shadow: 0 0 10px red; */
+
+}
+
+.new-arrival-box>span{
+    margin-left: 25px;
+}
+
+
+
+@media screen and (max-width: 600px) {
+  .new-collection-box-1,
+  .new-collection-box-2 {
+    flex: 30%;
+    margin: 20px;
+  }
+  .new-collection-box-3 {
+    flex: 30%;
+  }
+}
